--- a/about_us.html
+++ b/about_us.html
@@ -20,22 +20,6 @@
     <header>
         <div class="header-top">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-7 col-md-12 left-item">
-                        <ul>
-                            <li><i class="fas fa-phone-square"></i> 01007785292</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-5 d-none d-lg-block right-item">
-                        <ul>
-                            <li><a><i class="fab fa-github"></i></a></li>
-                            <li><a><i class="fab fa-google-plus-g"></i></a></li>
-                            <li> <a><i class="fab fa-pinterest-p"></i></a></li>
-                            <li><a><i class="fab fa-twitter"></i></a></li>
-                            <li> <a><i class="fab fa-facebook-f"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
 
             </div>
         </div>
@@ -245,8 +229,8 @@
 
     <div class="copy">
         <div class="container">
-            <a href="https://www.smarteyeapps.com/">2015 &copy; All Rights Reserved | Designed and Developed by
-                Smarteyeapps</a>
+            <a href="https://www.smarteyeapps.com/">2023 &copy; All Rights Reserved | Designed and Developed by
+                OTU students</a>
 
             <span>
                 <a><i class="fab fa-github"></i></a>
