--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
     </footer>
     <div class="copy">
         <div class="container">
-            <a href="https://www.smarteyeapps.com/">2015 &copy; All Rights Reserved | Designed and Developed by
-                Smarteyeapps</a>
+            <a href="https://www.smarteyeapps.com/">2023 &copy; All Rights Reserved | Designed and Developed by
+                OTU students</a>
 
             <span>
                 <a><i class="fab fa-github"></i></a>
